--- a/layouts/partials/sections/home.html
+++ b/layouts/partials/sections/home.html
@@ -223,7 +223,7 @@ particlesJS('particles-js', {
     "detect_on": "canvas",
     "events": {
       "onhover": {
-        "enable": true,
+        "enable": false,
         "mode": "repulse"
       },
       "onclick": {
