--- a/layouts/partials/sections/publications.html
+++ b/layouts/partials/sections/publications.html
@@ -4,6 +4,7 @@
 {{ end }}
 
 <div class="container-fluid anchor pb-5 publications-section" id="{{ $sectionID }}">
+  
   {{ if not (.section.hideTitle) }}
     <h1 class="text-center">
         <span id="{{ $sectionID }}"></span>{{ .section.name }}</h1>
@@ -11,6 +12,9 @@
     <h1 class="text-center" style="display: none">
         <span id="{{ $sectionID }}"></span>{{ .section.name }}</h1>
   {{ end }}
+
+  <!-- <div class="container"> All publications are listed <a href="{{ .posts.publications_all | safeURL }}">here</a>.</div> -->
+
   <div class="container ms-auto text-center">
     <div class="btn-group flex-wrap" role="pub-group" id="publication-filter-buttons">
       {{ range .buttons }}
@@ -20,8 +24,11 @@
       {{ end }}
     </div>
   </div>
+
   <div class="container filtr-publications">
+
     <div class="row" id="publication-card-holder">
+
       {{ range .publications }}
         {{ partial "cards/publication" . }}
       {{ end }}
